--- a/configuration-example.yaml
+++ b/configuration-example.yaml
@@ -33,8 +33,8 @@ logging:
       threshold: ALL
       target: stdout
     - type: file
-      currentLogFilename: logs/web-api-skeleton.log
-      archivedLogFilenamePattern: logs/web-api-skeleton-%d.log.gz
+      currentLogFilename: logs/alexa-api.log
+      archivedLogFilenamePattern: logs/alexa-api-%d.log.gz
       archivedFileCount: 5
       threshold: ALL
       timeZone: PST
@@ -44,14 +44,18 @@ authentication:
     password: password
 
 api:
-  endpointUri: https://api.oregonstate.edu/v1/web-api-skeleton/
+  endpointUri: https://api.oregonstate.edu/v1/
 
 
 apis:
-  locationsUrl: https://example.com/locations
-  termsUrl: https://example.com/terms
-  oauth2Url: https://example.com/oauth2/token
-  oauth2Params: SECRET
+  directoryUrl: https://api.oregonstate.edu/v1/directory?q=
+  locationsUrl: https://api.oregonstate.edu/v1/locations
+  termsUrl: https://oregonstateuniversity-dev.apigee.net/v1/catalog/terms/open
+  catalogUrl: https://oregonstateuniversity-dev.apigee.net/v1/catalog/courses
+  oauth2Url: https://api.oregonstate.edu/oauth2/token
+  oauth2Params: grant_type=client_credentials&client_id=secret&client_secret=sauce
+  deviceLatitude: "12.34567"
+  deviceLongitude: "-123.4567"
 
 httpClientConfiguration:
  timeout: 150000ms
